Fix issue overflow on right bar

--- a/trevor/src/index.css
+++ b/trevor/src/index.css
@@ -406,7 +406,7 @@ input[type="text"]:disabled {
 	margin-bottom: 5px;
 	width: 250px;
 	display: flex;
-	height: 100%;
+	/* height: 100%; */
 	align-items: center;
 	justify-content: flex-start;
 	overflow-x: auto;
@@ -1297,7 +1297,7 @@ button.active {
 
 	.rack-row {
 		width: 200px;
-		height: 100%;
+		/* height: 100%; */
 		min-width: 200px;
 	}
 
@@ -1408,7 +1408,7 @@ button.active {
 	}
 	.rack-row {
 		align-items: center;
-		height: 100%;
+		/* height: 100%; */
 		width: 200px;
 		min-width: 200px;
 	}
